# BUPT-Projects

./: README.md
Projects/MNIST手写数字识别/: activations.py  main.py  network.py  test.py
Projects/形式语言与自动机实验/实验一/: NFA-DFA.cpp
Projects/形式语言与自动机实验/实验二/: Convert-CFG.cpp
Projects/数据链路层协议设计/: Go-Back-N.c  Selective.c
Projects/智能交互机器人实验/实验一/Project/motions/: SideStepLeft.motion  SideStepRight.motion
Projects/智能交互机器人实验/实验一/Project/worlds/: .build.wbproj  build.wbt
Projects/机器视觉实验/词袋模型/: main.py
Projects/机器视觉实验/钱币检测/: canny.py  houghCircle.py  main.py  usePackage.py
Projects/计算导论与程序设计课程设计/: README.md
Projects/计算导论与程序设计课程设计/CPU/: CPU指令调试工具.html
Projects/计算导论与程序设计课程设计/OJ/实验1/: 实验11_11_链表匹配.cpp  实验11_13_链表交换.cpp
Projects/计算导论与程序设计课程设计/OJ/实验2/: 实验11_15_拆分链表.cpp
Projects/计算导论与程序设计课程设计/OJ/实验3/: 实验12_1_初识ASCII码文件.c  实验12_4_过滤注释.c  实验12_A_和谐词汇.c
Projects/计算导论与程序设计课程设计/实验1/: 实验11_10_链表排序.cpp  实验11_4_初识链表.cpp
Projects/计算导论与程序设计课程设计/实验2/: 实验11_9_链表归并.cpp
Projects/计算导论与程序设计课程设计/实验3/: 实验12_6_初识二进制文件.c
Projects/面向对象程序设计实践(C++)/基础实验/ex2/ex2.1/: Point.h  main.cpp
Projects/面向对象程序设计实践(C++)/基础实验/ex2/ex2.2/: main.cpp
Projects/面向对象程序设计实践(C++)/基础实验/ex3/: Shape.cpp  main.cpp
Projects/面向对象程序设计实践(C++)/综合实验/V2/: CMakeLists.txt
Projects/面向对象程序设计实践(C++)/综合实验/V3/: CMakeLists.txt
Projects/面向对象程序设计实践(C++)/综合实验/V3/client/include/: System.h
Projects/面向对象程序设计实践/基础实验/ex1/: Matix.cpp
Projects/面向对象程序设计实践/基础实验/ex3/: Shape.h
Projects/面向对象程序设计实践/基础实验/ex4/: main.cpp
Projects/面向对象程序设计实践/综合实验/: README.md
Projects/面向对象程序设计实践/综合实验/V1/: CMakeLists.txt
(+49 files in other folders)
